--- a/MabiMaster/MainWindow.xaml
+++ b/MabiMaster/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="MabiMaster.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+         xmlns:System="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:MabiMaster"
         Title="MainWindow" Height="350" Width="525">
     <Window.DataContext>
@@ -8,7 +9,20 @@
     </Window.DataContext>
     <TabControl>
         <TabItem Header="Character">
-
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                    <Label>Name</Label>
+                    <TextBox Grid.Column="1"/>
+                    <Label Grid.Row="1">Race</Label>
+                <ComboBox Grid.Row="1" Grid.Column="1" SelectedItem="{Binding CharRace}" ItemsSource="{Binding Races}"/>
+            </Grid>
         </TabItem>
         <TabItem Header="Skill Summary">
             <ItemsControl ItemsSource="{Binding SkillSystem.Categories}">
